# Softerer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Applications/: CMakeLists.txt
Applications/Triangle/: CMakeLists.txt
Applications/Triangle/Source/: Main.cpp
Headers/Softerer/: Context.hpp  FramebufferImage.hpp  Image.hpp  Queue.hpp  Semaphore.hpp  Surface.hpp
Headers/Softerer/Common/: Ref.hpp
Headers/Softerer/Platform/: Win32Surface.hpp
Source/: Context.cpp  FramebufferImage.cpp  Image.cpp  Queue.cpp  Semaphore.cpp  Surface.cpp
Source/Platform/: Win32Surface.cpp  Win32_FramebufferImage.cpp
